instead of PasswordSafe's.  This release can import XML files with date time fields in
either of these forms. The next release will only be able to process the W3C standard.
[] Fully support importing of TXT files exported from KeePass V1 including the Group Tree
structure, URL and date time fields. Please review the online file for
more details.

Bugs fixed in 3.26
==================
[3325116] No longer crashes when selecting system tray's more recent
entry immediately after unlock.
[3303018] Filters with quotes in their name are now correctly exported, imported
and displayed in the Manage Filters dialog.
[3301904] Export XML, export Text and the export of filters functions now process
file names and paths containing non-Latin characters.  In addition, when the specified
path does not exist because of missing directories, they are created
as neeeded.
[3234204] PasswordSafe no longer ends if the command flag is set to "-s <databasename>".
[3088187] Correct entry in List View is now used for Autotype when using the keyboard
to select the entry when PasswordSafe first opens.
[] Controls in Edit are now disabled if entry is protected, even though the user could
not have saved any changes.
[] Compare databases now correctly compares the 'Protect' and password policy 'symbols'
fields of entries.

New Features for 3.25
=====================
[] Dutch installation instructions thank to Kees, and a first
(incomplete) Dutch translation of the application thank to Bert, Kees
and Fred.
[] Korean texts in the application and installer program thanks to
Seunggyun.
[] Poserpro has provided Traditional Chinese texts for the installer
program.
[] New View menu option: Show entries with Expiry. This is useful for
displaying entries with passwords that are expired or about to expire.

Changes to Existing Features in 3.25
====================================
[3171962] The password expiration warning mechanism now checks for